--- a/src/app/contacts/info-screen-mobile/info-screen-mobile.component.scss
+++ b/src/app/contacts/info-screen-mobile/info-screen-mobile.component.scss
@@ -1,7 +1,13 @@
 .wrapper1 {
+    font-size: 10px;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 92dvh;
+
+
+    @media (max-width: 965px) {
+        height: 84dvh;
+    }
 
     .wrapper2 {
         width: 100%;
@@ -15,12 +21,12 @@
                 flex-direction: column;
                 justify-content: center;
                 width: 100%;
+                padding-left: 1.5em;
             }
 
             //#region header Info
             .header-info {
                 margin-top: 2em;
-                margin-left: 4em;
                 margin-bottom: 2em;
                 display: flex;
                 align-items: center;
@@ -29,10 +35,6 @@
                 @media (max-width: 1300px) {
                     flex-direction: column;
                     align-items: start;
-                }
-
-                @media (max-width: 1075px) {
-                    margin-left: 2em;
                 }
 
                 .title {
@@ -59,7 +61,7 @@
                     }
 
                     @media (max-width: 750px) {
-                        right: 4em;
+                        right: 2.5em;
                         display: block;
                     }
                 }
@@ -112,7 +114,6 @@
                     flex: 1;
 
                     .initiales-bg {
-                        margin-left: 2em;
                         display: flex;
                         align-items: center;
                         justify-content: center;
@@ -187,30 +188,19 @@
                 //#region detail infos
                 .contactinfos {
                     margin-top: 1em;
-                    margin-left: 2.2em;
                     font-size: 2em;
                     margin-bottom: 1em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
 
                 .mail-phone {
                     font-size: 1.6em;
                     font-weight: 700;
-                    margin-left: 2.8em;
                     margin-bottom: 1em;
                     margin-top: 2em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
 
                 a {
                     font-size: 1.6em;
-                    margin-left: 2.8em;
                     color: #007cee;
                     width: 90%;
                    
@@ -219,22 +209,12 @@
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         overflow: hidden;
-                        margin-left: 2em;
                         width: 100%;
-
-                        @media (max-width: 1075px) {
-                            margin-left: 2em;
-                        }
                     }
                 }
 
                 .phonenumber {
                     font-size: 1.6em;
-                    margin-left: 2.8em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
 
                 //#endregion
