--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -1,8 +1,5 @@
 <div class="overlay hidden" (click)="toggleDropdown()"></div>
 <div class="wrapper1">
-    <div class="nav"></div>
-    <div class="list"></div>
-
     <div class="wrapper2">
         <section>
             <div class="content">
@@ -49,10 +46,6 @@
                     </div>
                 </div>
                 <p class="contactinfos">Contact Information</p>
-                <!-- <div class="mailbox">
-                    <p class="mail-phone">Email</p>
-                    <a href="mailto:"><p class="email">{{overlayState.selectedUser.email}}</p></a>
-                </div> -->
                 <div class="mailbox">
                     <p class="mail-phone">Email</p>
                     <a href="mailto:" class="email-link">{{overlayState.selectedUser.email}}</a>
@@ -61,22 +54,22 @@
                     <p class="mail-phone">Phone</p>
                     <p class="phonenumber">{{overlayState.selectedUser.phone}}</p>
                 </div>
-                <div class="edit-mobilebtn" (click)="toggleDropdown()" tabindex="0">
-                    <img src="assets/img/info-screen/more_vert.png" alt="edit menu" />
-                    <div class="dropdown-menu" *ngIf="isDropdownOpen" (click)="$event.stopPropagation()">
-                        <div class="edit"
-                            (click)="toggleOverlay() + overlayState.AddOrEditState ='editContact'; toggleDropdown()">
-                            <img src="assets/img/info-screen/edit.svg" alt="edit" />
-                            <p>Edit</p>
-                        </div>
-                        <div class="delete" (click)="overlayState.deleteContact(); toggleDropdown()">
-                            <img src="assets/img/info-screen/delete.svg" alt="delete" />
-                            <p>Delete</p>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </section>
         }
+    </div>
+    <div class="edit-mobilebtn" (click)="toggleDropdown()" tabindex="0">
+        <img src="assets/img/info-screen/more_vert.png" alt="edit menu" />
+        <div class="dropdown-menu" *ngIf="isDropdownOpen" (click)="$event.stopPropagation()">
+            <div class="edit" (click)="toggleOverlay() + overlayState.AddOrEditState ='editContact'; toggleDropdown()">
+                <img src="assets/img/info-screen/edit.svg" alt="edit" />
+                <p>Edit</p>
+            </div>
+            <div class="delete" (click)="overlayState.deleteContact(); toggleDropdown()">
+                <img src="assets/img/info-screen/delete.svg" alt="delete" />
+                <p>Delete</p>
+            </div>
+        </div>
     </div>
 </div>
