--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -1,5 +1,11 @@
 .wrapper1 {
+    font-size: 10px;
     width: 100%;
+    height: 92dvh;
+
+    @media (max-width: 965px) {
+        height: 84dvh;
+    }
 
     section {
         font-size: 10px;
@@ -10,12 +16,12 @@
             flex-direction: column;
             justify-content: center;
             width: 100%;
+            padding-left: 5em;
         }
 
         //#region header Info
         .header-info {
             margin-top: 10em;
-            margin-left: 4em;
             display: flex;
             align-items: center;
             flex: 1;
@@ -26,9 +32,7 @@
                 align-items: start;
             }
 
-            @media (max-width: 1075px) {
-                margin-left: 2em;
-            }
+            
 
             .title {
                 font-size: 6.1em;
@@ -104,11 +108,11 @@
                 display: flex;
                 align-items: center;
                 flex: 1;
+                gap: 1.5em;
                 animation: fade-in-left 0.75s ease-in-out;
 
                 .initiales-bg {
                     margin-top: 1em;
-                    margin-left: 5em;
                     margin-bottom: 3em;
                     display: flex;
                     align-items: center;
@@ -127,7 +131,6 @@
                     }
 
                     @media (max-width: 1075px) {
-                        margin-left: 1em;
                         margin-bottom: 1em;
                     }
 
@@ -157,16 +160,16 @@
                     justify-content: center;
                     align-items: start;
                     word-break: break-all;
+                    margin-right: 2em;
 
                     h2 {
                         font-size: 4.5em;
                         font-weight: 700;
-                        margin-left: 0.4em;
+                        
 
                         @media (max-width: 1275px) {
                             font-size: 4.1em;
-                            margin-left: 0.5em;
-                            margin-right: 0.5em;
+
                         }
 
                         @media (max-width: 1160px) {
@@ -175,7 +178,6 @@
 
                         @media (max-width: 1060px) {
                             font-size: 2.2em;
-                            word-break: break-all;
                         }
 
                         @media (max-width: 345px) {
@@ -217,47 +219,35 @@
 
             //#region detail infos
             .contactinfos {
-                margin-left: 2.2em;
+                _margin-left: 2.2em;
                 font-size: 2em;
                 margin-top: 1.5em;
                 margin-bottom: 1em;
                 animation: fade-in-left 1s ease-in-out;
-
-                @media (max-width: 1075px) {
-                    margin-left: 1.3em;
-                }
             }
 
-          
             .mailbox {
                 animation: fade-in-left 0.75s ease-in-out;
-                max-width: 300px; 
+                max-width: 300px;
 
                 .email-link {
                     font-size: 1.6em;
-                    margin-left: 2.8em;
+                    _margin-left: 2.8em;
                     color: #007cee;
                     display: inline-block;
-                    max-width: 100%;
+                    // max-width: 100%;
+                    width: clamp(50%, 25vw, 100%);
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
 
                 .mail-phone {
                     font-size: 1.6em;
                     font-weight: 700;
-                    margin-left: 2.8em;
+                    _margin-left: 2.8em;
                     margin-bottom: 1em;
                     margin-top: 1em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
             }
 
@@ -267,135 +257,89 @@
                 .mail-phone {
                     font-size: 1.6em;
                     font-weight: 700;
-                    margin-left: 2.8em;
+                    _margin-left: 2.8em;
                     margin-bottom: 0.5em;
                     margin-top: 2em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
 
                 .phonenumber {
                     font-size: 1.6em;
-                    margin-left: 2.8em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
+                    _margin-left: 2.8em;
                 }
             }
 
             //#endregion
         }
+    }
 
-        //#region mobile edit Button
-        .edit-mobilebtn {
-            position: absolute;
-            top: 47em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 5.6em;
-            height: 5.6em;
-            background: #2a3647;
-            border-radius: 50%;
-            cursor: pointer;
+    //#region mobile edit Button
+    .edit-mobilebtn {
+        position: absolute;
+        top: 86%;
+        right: 4em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 5.6em;
+        height: 5.6em;
+        background: #2a3647;
+        border-radius: 50%;
+        cursor: pointer;
 
-            //#region Responsive Edit Mobil Button
-            @media (min-width: 1300px) {
-                display: none;
-            }
-
-            @media (max-width: 1300px) {
-                left: 55em;
-                top: 44em;
-            }
-
-            @media (max-width: 1250px) {
-                left: 55em;
-                top: 44em;
-            }
-
-            @media (max-width: 1200px) {
-                left: 45em;
-                top: 44em;
-            }
-
-            @media (max-width: 1100px) {
-                left: 35em;
-                top: 44em;
-            }
-
-            @media (max-width: 1024px) {
-                left: 30em;
-                top: 95em;
-            }
-
-            @media (max-width: 912px) {
-                left: 40em;
-                top: 83em;
-            }
-
-            @media (max-width: 820px) {
-                left: 32em;
-                top: 70em;
-            }
-            @media (max-width: 768px) {
-                left: 28em;
-                top: 57em;
-            }
-
-            //#endregion
-
-            &:hover {
-                background: #29abe2;
-            }
-
-            .dropdown-menu {
-                position: absolute;
-                right: 0em;
-                background-color: white;
-                border-radius: 20px;
-                border-bottom-right-radius: 0;
-                box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
-                padding: 1em 0.2em;
-                width: 120px;
-                z-index: 100;
-                animation: fade-in-left 0.5s ease-in-out;
-            }
-
-            .dropdown-menu div {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 1em 1em;
-                cursor: pointer;
-            }
-
-            .edit {
-                display: flex;
-                justify-content: start;
-                align-items: center;
-            }
-
-            .dropdown-menu div:hover {
-                background-color: #f0f0f0;
-            }
-
-            .dropdown-menu img {
-                width: 2em;
-                height: 2em;
-                margin-right: 1em;
-            }
-
-            p {
-                font-size: 1.5em;
-            }
+        //#region Responsive Edit Mobil Button
+        @media (min-width: 1300px) {
+            display: none;
         }
 
         //#endregion
+
+        &:hover {
+            background: #29abe2;
+        }
+
+        .dropdown-menu {
+            position: absolute;
+            right: 0em;
+            background-color: white;
+            border-radius: 20px;
+            border-bottom-right-radius: 0;
+            box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
+            padding: 1em 0.2em;
+            width: 120px;
+            z-index: 100;
+            animation: fade-in-left 0.5s ease-in-out;
+        }
+
+        .dropdown-menu div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 1em 1em;
+            cursor: pointer;
+        }
+
+        .edit {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+        }
+
+        .dropdown-menu div:hover {
+            background-color: #f0f0f0;
+        }
+
+        .dropdown-menu img {
+            width: 2em;
+            height: 2em;
+            margin-right: 1em;
+        }
+
+        p {
+            font-size: 1.5em;
+        }
     }
+
+    //#endregion
 }
 
 @keyframes fade-in-left {
@@ -418,4 +362,8 @@
     height: 100dvh;
     z-index: 99;
     background: rgba($color: #000000, $alpha: 0);
+}
+
+.edit-mobilebtn {
+    background: pink;
 }
