--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,13 +22,13 @@
             <!-- Email-Feld -->
             <div class="input-wrapper">
               <input class="mail-icon" maxlength="30" type="email" placeholder="Email" formControlName="email"
-                [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched) || errorMessage"
-                type="email">
+                autocomplete="email"
+                [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched) || errorMessage">
             </div>
             <!-- Passwort-Feld mit Bild-Logik -->
             <div class="input-wrapper">
               <input #pwInput class="lock-icon" maxlength="30" [type]="showPassword ? 'text' : 'password'" placeholder="Password"
-                formControlName="password" (focus)="isFocused = true" (blur)="isFocused = false"
+                formControlName="password" autocomplete="current-password" (focus)="isFocused = true" (blur)="isFocused = false"
                 (input)="checkPasswordInput()"
                 [class.error-border]="(form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)) || errorMessage">
               <img [src]="lockIconSrc" alt="Lock Icon" class="lock-image" (click)="checkLockClick(pwInput)">
